--- a/ios/SimpleRemote/SimpleRemote/en.lproj/MainStoryboard.storyboard
+++ b/ios/SimpleRemote/SimpleRemote/en.lproj/MainStoryboard.storyboard
@@ -13,7 +13,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="l2X-7H-7g7">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="identifier" id="l2X-7H-7g7">
                                 <rect key="frame" x="0.0" y="46" width="320" height="45"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -25,7 +25,7 @@
                         </prototypes>
                     </tableView>
                     <navigationItem key="navigationItem" title="Create Remote Icon" id="6b8-Tm-3DT">
-                        <barButtonItem key="leftBarButtonItem" image="gear.png" style="plain" id="a99-O6-OjG">
+                        <barButtonItem key="leftBarButtonItem" image="gear.png" id="a99-O6-OjG">
                             <connections>
                                 <action selector="addBarButtonPressed:" destination="oaV-El-VRv" id="99s-hY-aZG"/>
                             </connections>
@@ -61,7 +61,6 @@
         <class className="SRMainViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SRMainViewController.h"/>
             <relationships>
-                <relationship kind="action" name="addBarButtonPressed:"/>
                 <relationship kind="outlet" name="addBarButtonItem" candidateClass="UIBarButtonItem"/>
             </relationships>
         </class>
