--- a/ios/SimpleRemote/SimpleRemote/en.lproj/MainStoryboard.storyboard
+++ b/ios/SimpleRemote/SimpleRemote/en.lproj/MainStoryboard.storyboard
@@ -17,7 +17,7 @@
                         <barButtonItem key="leftBarButtonItem" image="gear.png" id="qBT-bQ-0X1">
                             <connections>
                                 <action selector="settingsButtonPressed:" destination="oaV-El-VRv" id="4SJ-in-jVS"/>
-                                <segue destination="dSW-Ph-HSd" kind="modal" id="Bmx-Mo-Q7H"/>
+                                <segue destination="wZT-r5-mld" kind="modal" id="RdT-w1-ye0"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -26,37 +26,48 @@
             </objects>
             <point key="canvasLocation" x="652" y="205"/>
         </scene>
-        <!--Settings View Controller-->
+        <!--Navigation Controller-->
+        <scene sceneID="9dR-7X-LXF">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="wZT-r5-mld" sceneMemberID="viewController">
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="blackTranslucent" id="eyH-wW-R0L">
+                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="dSW-Ph-HSd" kind="relationship" relationship="rootViewController" id="6PF-WI-6ye"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wtZ-O9-7KM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="138" y="867"/>
+        </scene>
+        <!--Settings View Controller - Settings-->
         <scene sceneID="myw-3K-Erg">
             <objects>
                 <tableViewController id="dSW-Ph-HSd" customClass="SRSettingsViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="j76-PH-xvJ">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
-                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" barStyle="blackTranslucent" id="taQ-3d-3UH">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <items>
-                                <navigationItem title="Settings" id="IQi-Bk-JyX">
-                                    <barButtonItem key="leftBarButtonItem" systemItem="done" id="EwE-JU-Frc">
-                                        <connections>
-                                            <action selector="closeButtonTouched:" destination="dSW-Ph-HSd" id="JiJ-F3-vB7"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </navigationItem>
-                            </items>
-                        </navigationBar>
                         <sections/>
                         <connections>
                             <outlet property="dataSource" destination="dSW-Ph-HSd" id="3hj-mu-f1x"/>
                             <outlet property="delegate" destination="dSW-Ph-HSd" id="nfE-vx-T56"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Settings" id="na9-KN-KxO">
+                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="EwE-JU-Frc">
+                            <connections>
+                                <action selector="doneButtonTouched:" destination="dSW-Ph-HSd" id="UaT-2l-PBD"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rTf-ap-f1B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="652" y="785"/>
+            <point key="canvasLocation" x="652" y="867"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="aUR-eY-w7e">
@@ -79,6 +90,20 @@
     <resources>
         <image name="gear.png" width="20" height="20"/>
     </resources>
+    <classes>
+        <class className="SRMainViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SRMainViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="settingsButtonPressed:"/>
+            </relationships>
+        </class>
+        <class className="SRSettingsViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SRSettingsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="doneButtonTouched:"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
